[gd_scene load_steps=7 format=2]

[ext_resource path="res://VideoBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Screens/DialogueBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Screens/Choice.tscn" type="PackedScene" id=3]
[ext_resource path="res://Screens/NarrationInterface.gd" type="Script" id=4]
[ext_resource path="res://Screens/ImageBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Asset/SoundEffect/GiraFoglio.ogg" type="AudioStream" id=6]

[node name="NarrationInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoBox" parent="." instance=ExtResource( 1 )]
visible = false

[node name="DialogueBox" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Choice" parent="." instance=ExtResource( 3 )]
visible = false

[node name="ImageBox" parent="." instance=ExtResource( 5 )]
visible = false

[node name="SEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
